fixed vertical scrolling on mobile

--- a/css/theme.css
+++ b/css/theme.css
@@ -82,6 +82,7 @@
 
 body {
   margin: 0;
+  overflow-x:clip;
   font-family: 'Noto Sans Arabic';
   font-size: var(--bs-body-font-size);
   font-weight: var(--bs-body-font-weight);
@@ -3064,7 +3065,6 @@ textarea.form-control-lg {
 .navbar-brand {
   padding-top: var(--bs-navbar-brand-padding-y);
   padding-bottom: var(--bs-navbar-brand-padding-y);
-  margin-right: var(--bs-navbar-brand-margin-end);
   font-size: var(--bs-navbar-brand-font-size);
   color: var(--bs-navbar-brand-color);
   text-decoration: none;
